# ProjectInitializer

./: CMakeLists.txt  README.md
src/: pch.h
test/: main.cpp  pch.h
